# c-game-raylib

./: CMakeLists.txt  README.md  notes.txt
src/: main  main.c
src/config/: config.h
src/core/: game.c  game.h
